syntax = "proto3";
// Example how to update gogoprotobuf generated code (Mac OS).
// go get -u github.com/gogo/protobuf/...
// Download release of protobuf from: https://github.com/google/protobuf/releases 
// Use binary from unpacked release, for example:
// ../../protoc-3.1.0-osx-x86_64/bin/protoc --proto_path=../../protoc-3.1.0-osx-x86_64/:../../../../../:. --gogofaster_out=. message.proto

package proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;

message ClientInfo {
  string User = 1 [(gogoproto.jsontag) = "user"];
  string Client = 2 [(gogoproto.jsontag) = "client"];
  bytes DefaultInfo = 3 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "default_info,omitempty", (gogoproto.nullable) = true];
  bytes ChannelInfo = 4 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "channel_info,omitempty", (gogoproto.nullable) = true];
}

message Message {
  string UID = 1 [(gogoproto.jsontag) = "uid"];
  string Timestamp = 2 [(gogoproto.jsontag) = "timestamp"];
  string Channel = 3 [(gogoproto.jsontag) = "channel"];
  bytes Data = 4 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "data", (gogoproto.nullable) = true];
  string Client = 5 [(gogoproto.jsontag) = "client,omitempty"];
  ClientInfo Info = 6 [(gogoproto.jsontag) = "info,omitempty"];
}

message JoinMessage {
  string Channel = 1 [(gogoproto.jsontag) = "channel"];
  ClientInfo Data = 2 [(gogoproto.jsontag) = "data", (gogoproto.nullable) = false];
}

message LeaveMessage {
  string Channel = 1 [(gogoproto.jsontag) = "channel"];
  ClientInfo Data = 2 [(gogoproto.jsontag) = "data", (gogoproto.nullable) = false];
}

message ControlMessage {
  // UID in case of controlCommand is a unique node ID which originally published
  // this control command.
  string UID = 1 [(gogoproto.jsontag) = "uid"];
  string Method = 2 [(gogoproto.jsontag) = "method"];
  bytes Params = 3 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "params", (gogoproto.nullable) = true];
}

message AdminMessage {
  string UID = 1 [(gogoproto.jsontag) = "uid"];
  string Method = 2 [(gogoproto.jsontag) = "method"];
  bytes Params = 3 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "params", (gogoproto.nullable) = true];
}